--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,13 @@ h1 {
   color: green;
   font-size: 60px;
 }
+
+h2 {
+  color: blue;
+  font-size: 20px;
+}
+
+p {
+  border: 2px solid powderblue;
+  padding: 30px;
+}
